# weather-cli

./: Cargo.toml  README.md
src/: api.rs  cli.rs  env.rs  impl.rs  main.rs  types.rs
