[package]
name = "weather"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0.120"
clap = { version = "4.5.9", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
prettytable = "0.10.0"
mongodb = "2.1"
bson = { version = "2", features = ["chrono-0_4"] } # Needed for using chrono datetime in doc
